@@ -1,3 +1,7 @@
+2017-03-07  Carl Hetherington  <cth@carlh.net>
+
+	* Handle failure to write to cinemas file more nicely.
+
 2017-02-28  Carl Hetherington  <cth@carlh.net>
 
 	* Updated de_DE translation from Carsten Kurz.
